--- a/css/partials/styles.scss
+++ b/css/partials/styles.scss
@@ -1,4 +1,3 @@
-
 // Global styles
 :root{
   font-size: 10px;
@@ -8,12 +7,7 @@
   outline: 0;
 }
 
-*{
-  //transition: all .2s ease;
-}
-
 // Font styles
-
 @import 'https://fonts.googleapis.com/css?family=Reenie+Beanie';
 //use - font-family: 'Reenie Beanie', cursive;
 
@@ -114,6 +108,7 @@ a.title{
   color: rgba(255, 255, 255, .4);
   text-decoration: none;
   transition: all .2s ease;
+  animation-delay: 1.5s;
   @media #{$sm}{
     right: 15%;
     bottom: 20px;
