--- a/css/main.css
+++ b/css/main.css
@@ -77,7 +77,7 @@ h2 {
 
 .hero {
   background: #000;
-  background-image: linear-gradient(transparent 70%, rgba(0, 0, 0, 0.7)), url(../img/lion_small.jpg);
+  background-image: linear-gradient(transparent 60%, black), url(../img/lion_small.jpg);
   width: 100vw;
   height: 100vh;
   background-size: cover;
@@ -105,7 +105,8 @@ a.title {
   color: rgba(255, 255, 255, 0.4);
   text-decoration: none;
   transition: all .2s ease;
-  animation-delay: 1s; }
+  animation-delay: 1s;
+  line-height: .9; }
   @media screen and (min-width: 500px) {
     a.title {
       right: 15%;
@@ -116,13 +117,15 @@ a.title {
     @media screen and (min-width: 500px) {
       a.title p {
         font-size: 8rem; } }
+  a.title .subline {
+    font-size: 2rem;
+    font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+    font-weight: 300; }
   a.title i {
-    font-size: 3rem;
-    margin-top: -25px; }
+    font-size: 3rem; }
     @media screen and (min-width: 500px) {
       a.title i {
-        font-size: 5rem;
-        margin-top: -35px; } }
+        font-size: 5rem; } }
   a.title:hover {
     color: rgba(255, 255, 255, 0.5); }
     @media screen and (min-width: 500px) {
