--- a/css/partials/styles.scss
+++ b/css/partials/styles.scss
@@ -56,8 +56,8 @@ h2{
   background: #000;
   background-image:
     linear-gradient(
-      rgba(0,0,0,.0) 70%,
-      rgba(0,0,0,.7)
+      rgba(0,0,0,.0) 60%,
+      rgba(0,0,0,1)
     ),
     url(../img/lion_small.jpg);
   width: 100vw;
@@ -109,6 +109,7 @@ a.title{
   text-decoration: none;
   transition: all .2s ease;
   animation-delay: 1s;
+  line-height: .9;
   @media #{$sm}{
     right: 15%;
     bottom: 20px;
@@ -121,12 +122,17 @@ a.title{
       font-size: 8rem;
     }
   }
+  .subline{
+    font-size: 2rem;
+    font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+    font-weight: 300;
+  }
   i{
     font-size: 3rem;
-    margin-top: -25px;
+    //margin-top: -25px;
     @media #{$sm}{
       font-size: 5rem;
-      margin-top: -35px;
+      //margin-top: -35px;
     }
   }
   &:hover{
